--- a/public/css/main.css
+++ b/public/css/main.css
@@ -438,7 +438,18 @@ button {
   background-color: #212126;
   box-shadow: -3px 2px 13px 0 #141628;
   overflow-x: hidden;
-  overflow-y: auto;
+  animation: slideInLeft 250ms backwards;
+}
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    right: -30%;
+  }
+  to {
+    opacity: 1;
+    right: 0;
+  }
 }
 
 .film-details__inner {
